<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Carsai LMS</string>
    <string name="loading">Loading… Please Wait!</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="check_updates">Check for Updates</string>
    <string name="menu">Menu</string>
    <string name="exit_app">Exit App</string>
    <string name="exit_message">Do you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="offline_title">No Internet Connection</string>
    <string name="offline_message">Please check your internet connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">Follow System</string>
    <string name="language">Language</string>
    <string name="language_english">English</string>
    <string name="language_portuguese">Português</string>
    <string name="downloading">Downloading…</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
    <string name="checking_updates">Checking for updates…</string>
    <string name="update_available">Update available!</string>
    <string name="update_message">Version %s is available. Would you like to download?</string>
    <string name="no_updates">You\'re using the latest version</string>
    <string name="download_update">Download</string>
    <string name="later">Later</string>
    <string name="version">Version</string>
    <string name="choose_file">Choose file</string>
    <string name="file_selected">File selected</string>
    
    <string name="about_title">About Carsai LMS</string>
    <string name="about_description">Carsai LMS is a comprehensive learning management system designed to provide seamless access to educational content and resources.</string>
    <string name="about_features">Features</string>
    <string name="about_version_info">Version Information</string>
    <string name="about_developer">Developed by CarsaiDev Team</string>
    <string name="changelog">Changelog</string>
</resources>
